Moving phrases to UserSetting.json file

--- a/Torpedo.Application/Torpedo.Application.csproj
+++ b/Torpedo.Application/Torpedo.Application.csproj
@@ -13,6 +13,9 @@
     <None Update="Resources\watermark.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="UserSetting.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
