Change mechanism parsing

--- a/Torpedo.Bot/Torpedo.Bot.csproj
+++ b/Torpedo.Bot/Torpedo.Bot.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Torpedo.Infrastructure\Torpedo.Infrastructure.csproj" />
     <ProjectReference Include="..\Torpedo.VideoConverter\Torpedo.Converters.csproj" />
   </ItemGroup>
 
