--- a/Torpedo.VideoConverter/Torpedo.Converters.csproj
+++ b/Torpedo.VideoConverter/Torpedo.Converters.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Xabe.FFmpeg" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Torpedo.Infrastructure\Torpedo.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
