--- a/Torpedo.Bot/Torpedo.Bot.csproj
+++ b/Torpedo.Bot/Torpedo.Bot.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
