--- a/Torpedo.Infrastructure/Torpedo.Infrastructure.csproj
+++ b/Torpedo.Infrastructure/Torpedo.Infrastructure.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU;ARM64</Platforms>
     <LangVersion>8</LangVersion>
   </PropertyGroup>
